<resources>
    <string name="sing_in_title">SkillMerge</string>
    <string name="hint_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_up">sign up</string>
    <string name="button_sign_in">sign in</string>

    <string name="bad_token">Please sign in</string>

    <string name="app_name">BIPapp</string>
    <string name="title_search_project">Search project</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_projects">Projects</string>
    <string name="title_user">User</string>

    <string name="description_fab_edit_user">Edit user</string>

    <string name="button_save_edit_user">Save</string>

    <string name="hint_fullname">Full name</string>
    <string name="hint_age">Age</string>
    <string name="hint_biography">Biography</string>
    <string name="hint_skills">Skills</string>
    <string name="description_select_photo">Select new photo</string>

    <string name="description_fab_create_project">Create project</string>

    <string name="button_create_project">Create</string>

    <string name="hint_project_name">Project name</string>
    <string name="hint_project_description">Project description</string>
    <string name="hint_project_tags">Project tags</string>

    <string name="description_user_photo">Photo of user</string>

    <string name="button_search">Search</string>
    <string name="hint_search">Enter name or description</string>

    <string name="button_back">Back</string>

    <string name="description_fab_update_project">Update project</string>
    <string name="button_subscribe">Subscribe</string>
    <string name="button_unsubscribe">Unsubscribe</string>
    <string name="button_leave">Leave</string>
    <string name="button_delete">Delete</string>
    <string name="button_accept">Accept</string>

    <string name="title_choose_level_skill">Choose level of skill</string>
    <string name="title_my_information">My information</string>
    <string name="title_my_skills">My skills</string>

    <string name="title_select_source_photo">Please select a source for a new image</string>
    <string name="title_source_gallery">Gallery</string>
    <string name="title_source_camera">Camera</string>
    <string name="button_search_reset">Reset</string>
    <string name="title_welcome">Welcome to SkillMerge!</string>
    <string name="title_initiator">Initiator</string>
    <string name="title_requested_skills">Requested skills</string>
    <string name="title_project_create">Project constructor</string>
    <string name="title_project_name">Project name</string>
    <string name="title_project_tag">Project tag</string>
    <string name="title_project_skills">Project skills</string>
    <string name="title_projects_search">Projects explorer</string>
    <string name="hint_search_username">Enter username</string>
    <string name="title_search_skills">Suitable skills</string>

    <string name="title_participants">Participants</string>
    <string name="title_volunteer">Volunteer</string>

    <string name="title_project_update">Project update</string>
    <string name="button_project_update">Update</string>
    <string name="title_subscriptions">Subscriptions</string>
    <string name="title_subscribers">Subscribers</string>
    <string name="hint_email">Enter email</string>

    <string name="title_email">Email verification</string>
    <string name="message_email">Check your email</string>

</resources>