<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_search_project"
        android:icon="@drawable/ic_baseline_search_124"
        android:title="@string/title_search_project" />

    <item
        android:id="@+id/navigation_projects"
        android:icon="@drawable/ic_baseline_article_124"
        android:title="@string/title_projects" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:iconTint="@color/orange"
        android:title="@string/title_user" />

</menu>