<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.search_project.FragmentSearch">

    <EditText
        android:id="@+id/edit_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_search"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="@color/deep_pipe_green"
        android:textSize="20sp" />

    <include layout="@layout/panel_skills" />

    <include layout="@layout/panel_project_tags" />

    <Button
        android:id="@+id/button_search_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/ostrich"
        android:text="@string/button_search_reset"
        android:textColor="@color/deep_pipe_green"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/ostrich"
        android:text="@string/button_search"
        android:textColor="@color/deep_pipe_green"
        android:textSize="25sp" />
</LinearLayout>