<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitySignIn"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="50dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="welcome to SkillMerge!"
        android:gravity="center"
        android:textSize="40dp"
        android:textColor="@color/deep_pipe_green"
        android:fontFamily="@font/ostrich">
    </TextView>
    <EditText
        android:id="@+id/edit_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_login"
        android:textColorHint="@color/deep_pipe_green"
        android:textColor="@color/deep_pipe_green">
    </EditText>

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColorHint="@color/deep_pipe_green"
        android:textColor="@color/deep_pipe_green">
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:textColor="@color/deep_pipe_green"
            android:textSize="25dp"
            android:fontFamily="@font/ostrich"
            android:text="@string/button_sign_up">
        </Button>

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:textColor="@color/deep_pipe_green"
            android:fontFamily="@font/ostrich"
            android:textSize="25dp"
            android:text="@string/button_sign_in">
        </Button>
    </LinearLayout>

</LinearLayout>