<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_peach"
    android:orientation="vertical"
    tools:context=".ui.projects.FragmentProjectUpdate">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/deep_pipe_green"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:src="@drawable/ic_baseline_edit_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/title_project_update"
            android:textColor="@color/light_peach"
            android:textSize="30sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/title_project_name"
                android:textColorHint="@color/deep_pipe_green">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_project_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/deep_pipe_green" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_project_description"
                android:textColorHint="@color/deep_pipe_green">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_project_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:hint="@string/hint_project_description"
                    android:inputType="textMultiLine"
                    android:textColor="@color/deep_pipe_green"
                    tools:text="ivan testoriodwqdwdqwdwqdwdwd qdwqdwdqwdwqdwqqwd qwdqwd" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="5dp"
                android:text="@string/title_project_tag"
                android:textColor="@color/deep_pipe_green"
                android:textSize="30sp" />

            <include layout="@layout/panel_project_tags" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="5dp"
                android:text="@string/title_project_skills"
                android:textColor="@color/deep_pipe_green"
                android:textSize="30sp" />

            <include layout="@layout/panel_skills" />

            <Button
                android:id="@+id/button_project_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange"
                android:fontFamily="@font/ostrich"
                android:text="@string/button_project_update"
                android:textColor="@color/deep_pipe_green"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>